# VGL

./: .gitignore  CMakeLists.txt  Readme.md  install.sh
Classes/ImageLoader/: stb_image.hpp
Classes/Libs/: libs.hpp
Classes/Libs/include/glad/: glad.h
Classes/Libs/src/: glad.c
Classes/LoadTexture/: LoadObject.hpp  LoadTexture.hpp
Classes/Shaderes/: shader.hpp
Constants/: Common.hpp
Random/: audio.cpp  run.cpp
Testing/: Music.hpp  getKey.hpp  test1.cpp
Testing/Glfw/: test1.cpp
Testing/Scenes/: scene1.cpp  test1.cpp
Utils/: __init__.py
Utils/Music/: PlaySound.py
VGL/: Scenes.hpp  Shader.h  camera.h  common.hpp
VGL/Encrypt/: Encode.cpp  Encode.hpp
VGL/Generators/: vao.hpp
VGL/scenes/: Counter.hpp  Scenes.hpp  Switcher.cpp  Switcher.hpp  load_texture.cpp  scene1.hpp  scene2.hpp
VGL/scenes/Scene1/: scene1.cpp
VGL/scenes/Scene2/: scene2.cpp  scene2.hpp
common/: controls.cpp  objloader.cpp  objloader.hpp  tangentspace.cpp  text2D.cpp  text2D.hpp  texture.cpp  vboindexer.cpp
lib/glfw/examples/: CMakeLists.txt
src/: Switcher.cpp  camera.cpp  load_texture.cpp  main.cpp  texture.cpp  video_reader.cpp
src/Scene1/: scene1.cpp
src/Scene2/: scene2.cpp
